[package]
name = "chess-titans-rtx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chess_titans_rtx"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory_NonVolatile",
    "Win32_System_SystemServices",
]

[profile.release]
strip = true
opt-level = 2
lto = true
incremental = false
codegen-units = 16
panic = "abort"